# docs/swagger.json
@@ -8,6 +8,40 @@
     },
     "basePath": "/",
     "paths": {
+        "/char": {
+            "post": {
+                "description": "Cria um novo personagem com os dados informados do body",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Character"
+                ],
+                "summary": "Criar um novo personagem",
+                "parameters": [
+                    {
+                        "description": "Dados do Personagem",
+                        "name": "character",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateCharacterInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Character"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "description": "Cria um usuário com os dados informados no body.",
@@ -80,7 +114,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.UserErrorResponse"
                         }
                     }
                 }
@@ -116,7 +150,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.UserErrorResponse"
                         }
                     }
                 }
@@ -161,19 +195,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.UserErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.UserErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.UserErrorResponse"
                         }
                     }
                 }
@@ -181,6 +215,28 @@
         }
     },
     "definitions": {
+        "dto.CreateCharacterInput": {
+            "type": "object",
+            "required": [
+                "description",
+                "name",
+                "type"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "imageURL": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.CreateUserInput": {
             "type": "object",
             "required": [
@@ -203,15 +259,6 @@
                 }
             }
         },
-        "dto.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "usuário não encontrado"
-                }
-            }
-        },
         "dto.UpdateUser": {
             "type": "object",
             "properties": {
@@ -226,6 +273,15 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.UserErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "usuário não encontrado"
                 }
             }
         },
@@ -258,6 +314,33 @@
                 },
                 "userID": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.Character": {
+            "type": "object",
+            "properties": {
+                "characterID": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "guides": {
+                    "description": "Has many guides",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Guide"
+                    }
+                },
+                "imageURL": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
                 }
             }
         },
